
    To make someone run the command after psudo, this should be psudoas, not psudo, and this person must be selected
    in the last "as" of execute command. This does not work if the selected entity has not the permission to
    run the commande or if it is a mobs. In general, it is better to keep psudo or psudouuid if the plugin command
    supports UUIDs.

    Don't forget to use psudouuid with mobs to replace the selector by the uuid and not a poor "pig", even with @s !

    Partially based on the other fork https://github.com/Numa-Lab/PsudoCommands

1.0.28
    Drop support for 1.12- and 1.12- parameters.
    Selectors are now exactly those from vanilla commands.

1.0.27
    Optimized team=, scores= to find a Team or an Objective
    Fixed scores={objective!=min..max}
    Fixed name= not working on players (their CustomName is null)
    Fixed get distance of non player entities
    Console has now a location at default world's spawn

1.0.26
    Fixed some usage of distance in min..max in selector, like 0.1..10.

1.0.25
    Added /psudoasraw command that ignore selectors and relative coordinates ~ ^ in command, to only parse the sender selector.

1.0.24
    Fixed error when a @ is used in the command but not as selector.

1.0.23
    Fixed specific issue with local or relative coordinates.

1.0.22
    Fixed issue when a selector doesn't have argument with e.g. only @e[] or @e.

1.0.21
    Selectors can now have spaces between their tags.

1.0.20
    Fixed some bugs with coordinates and code improvement

1.0.19
    Fixed [type=] if the given type contains 'minecraft:'

1.0.18
    Added TabCompleter for the list of available loaded commands and their arguments.

1.0.17
    Added an error message if the sender has no permission
    Optimized code

1.0.16
    Added [gamemode=], identical to [m=]
    Added [dx=] [dy=] [dz=] with almost same behavior than vanilla
    Fixed [x=] [y=] [z=] with floats

1.0.15
    Added support for local coordinates ^